text overflow issue done

--- a/pages/stylesheets/App.css
+++ b/pages/stylesheets/App.css
@@ -249,10 +249,11 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 .clamp2 {
-  display: -webkit-box;
   -webkit-box-orient: vertical;
   -webkit-line-clamp: 2;
+  display: -webkit-box;
   overflow: hidden;
+  word-break: break-all;
 }
 
 .clamp3 {
